[fix] overflow-y: scroll should only apply to app/index.html

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,7 +1,3 @@
-html {
-  overflow-y: scroll;
-}
-
 .json {
   pre {
     padding: 1em;
